selector -> toolbox-selector

--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -1,5 +1,5 @@
 ---
-layout: selectors
+layout: toolbox
 title: Buttons
 permalink: /buttons
 ---
@@ -13,16 +13,16 @@ permalink: /buttons
       <div class="field__label">Loading</div>
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--multiselect selector--expanded JS_selector JS_extra">
-            <div class="selector__item JS_selectorItem--active JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field JS_load_pushes">Pushes</div>
+          <div class="toolbox-selector toolbox-selector--multiselect toolbox-selector--expanded JS_toolbox-selector JS_extra">
+            <div class="toolbox-selector__item JS_toolbox-selectorItem--active JS_toolbox-selectorItem">
+              <div class="toolbox-selector__block">
+                <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field JS_load_pushes">Pushes</div>
               </div>
             </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem--active JS_selectorItem">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field JS_load_buttons">Buttons</div>
+            <div class="toolbox-selector__itemSeperator"></div>
+            <div class="toolbox-selector__item JS_toolbox-selectorItem--active JS_toolbox-selectorItem">
+              <div class="toolbox-selector__block">
+                <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field JS_load_buttons">Buttons</div>
               </div>
             </div>
           </div>
