--- a/pages/drag.html
+++ b/pages/drag.html
@@ -3,7 +3,7 @@ layout: drag
 title: Drag
 permalink: /drag
 ---
-<link rel="stylesheet" href="{{ site.baseurl }}/sass/plugins/selector-draggable.css">
+<link rel="stylesheet" href="{{ site.baseurl }}/sass/plugins/toolbox-selector-draggable.css">
 <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
 <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
 <script>
@@ -21,9 +21,9 @@ permalink: /drag
 
 
 <div class="ui-widget-content">
-  {% include components/selector.html selectorData="#0BDA51,,4362,Bulk update speed regressed in 282" singleselect="true" expanded="true" draggable="true" readonly="true" selectedIndexes="1" %}
+  {% include components/toolbox-selector.html toolboxSelectorData="#0BDA51,,4362,Bulk update speed regressed in 282" singleselect="true" expanded="true" draggable="true" readonly="true" selectedIndexes="1" %}
 </div>
 
 <div class="ui-widget-content">
-  {% include components/selector.html selectorData="#00BFFF,,7654,Add indicators in import/export" singleselect="true" expanded="true" draggable="true" readonly="true" selectedIndexes="1" %}
+  {% include components/toolbox-selector.html toolboxSelectorData="#00BFFF,,7654,Add indicators in import/export" singleselect="true" expanded="true" draggable="true" readonly="true" selectedIndexes="1" %}
 </div>
