--- a/pages/inputs.html
+++ b/pages/inputs.html
@@ -1,5 +1,5 @@
 ---
-layout: selectors
+layout: toolbox
 title: Inputs
 permalink: /inputs
 ---
@@ -14,10 +14,10 @@ permalink: /inputs
       <div class="field__label">Loading</div>
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--multiselect selector--expanded JS_selector JS_extra">
-            <div class="selector__item JS_selectorItem--active JS_selectorItem" tabindex='0'>
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field JS_load_inputs">Inputs</div>
+          <div class="toolbox-selector toolbox-selector--multiselect toolbox-selector--expanded JS_toolbox-selector JS_extra">
+            <div class="toolbox-selector__item JS_toolbox-selectorItem--active JS_toolbox-selectorItem" tabindex='0'>
+              <div class="toolbox-selector__block">
+                <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field JS_load_inputs">Inputs</div>
               </div>
             </div>
           </div>
