--- a/pages/tabs.html
+++ b/pages/tabs.html
@@ -1,5 +1,5 @@
 ---
-layout: selectors
+layout: toolbox
 title: Tabs
 permalink: /tabs
 ---
@@ -14,16 +14,16 @@ permalink: /tabs
       <div class="field__label">Tabs panel width</div>
       <div class="field__data">
         <div class="field__value">
-          <div class="selector selector--singleselect selector--expanded selector--required JS_selector JS_extra">
-            <div class="selector__item JS_selectorItem--active selector__item--selected JS_selectorItem JS_changeTabsWidth" tabindex='0' data-width="sm:w-3/4">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field ">75%</div>
+          <div class="toolbox-selector toolbox-selector--singleselect toolbox-selector--expanded toolbox-selector--required JS_toolbox-selector JS_extra">
+            <div class="toolbox-selector__item JS_toolbox-selectorItem--active toolbox-selector__item--selected JS_toolbox-selectorItem JS_changeTabsWidth" tabindex='0' data-width="sm:w-3/4">
+              <div class="toolbox-selector__block">
+                <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field ">75%</div>
               </div>
             </div>
-            <div class="selector__itemSeperator"></div>
-            <div class="selector__item JS_selectorItem JS_changeTabsWidth" tabindex='0' data-width="sm:w-1/4">
-              <div class="selector__block">
-                <div class="selector__blockPart selector__blockPart--field ">25%</div>
+            <div class="toolbox-selector__itemSeperator"></div>
+            <div class="toolbox-selector__item JS_toolbox-selectorItem JS_changeTabsWidth" tabindex='0' data-width="sm:w-1/4">
+              <div class="toolbox-selector__block">
+                <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field ">25%</div>
               </div>
             </div>
           </div>
@@ -36,7 +36,7 @@ permalink: /tabs
 <script>
   $('.JS_changeTabsWidth').on('click', function() {
     setTimeout( () => {
-      if($(this).hasClass('JS_selectorItem--active')) {
+      if($(this).hasClass('JS_toolbox-selectorItem--active')) {
         $('.JS_change_my_width').removeClass('sm:w-full sm:w-1/4 sm:w-3/4 sm:w-1/2');
         $('.JS_change_my_width').addClass($(this).attr('data-width'));
         window.dispatchEvent(new Event('resize'));
