--- a/pages/selectors.html
+++ b/pages/selectors.html
@@ -146,15 +146,6 @@ permalink: /toolbox-selectors
 <div class="flex flex-col sm:flex-row m-8 py-4 border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class="sm:w-1/3 p-2 overflow-hidden">
     <h2 class="my-8">Examples without popup</h2>
-    {% comment %} Field {% endcomment %}
-    <div class="field field--not-empty">
-      <div class="field__label">Panel selector</div>
-      <div class="field__data">
-        <div class="field__value">
-          {% include components/toolbox-selector.html toolboxSelectorData=",,,;,<sup>11</sup>,,;,,,;,,," expanded="true" singleselect="true" selectedIndexes="1" %}
-        </div>
-      </div>
-    </div>
 
     {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
@@ -321,7 +312,7 @@ permalink: /toolbox-selectors
       <div class="field__label">Checkbox</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/toolbox-selector.html toolboxSelectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData=",,,;,,," expanded="true" singleselect="true" selectedIndexes="1" required="true" %}
         </div>
       </div>
     </div>
@@ -331,7 +322,7 @@ permalink: /toolbox-selectors
       <div class="field__label">Checkbox - colored </div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/toolbox-selector.html toolboxSelectorData="#0BDA51,,,;,,," expanded="true" singleselect="true" selectedIndexes="1" %}
+          {% include components/toolbox-selector.html toolboxSelectorData="#0BDA51,,,;,,," expanded="true" singleselect="true" selectedIndexes="1" required="true" %}
         </div>
       </div>
     </div>
