--- a/pages/buttons.html
+++ b/pages/buttons.html
@@ -16,7 +16,7 @@ permalink: /buttons
           <div class="toolbox-selector toolbox-selector--multiselect toolbox-selector--expanded JS_toolbox-selector JS_extra">
             <div class="toolbox-selector__item JS_toolbox-selectorItem--active JS_toolbox-selectorItem">
               <div class="toolbox-selector__block">
-                <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field JS_load_pushes">Pushes</div>
+                <div class="toolbox-selector__blockPart toolbox-selector__blockPart--field JS_load_toolbox-pushes">Pushes</div>
               </div>
             </div>
             <div class="toolbox-selector__itemSeparator"></div>
@@ -34,14 +34,14 @@ permalink: /buttons
 </div>
 
 <script>
-  $('.JS_load_pushes').on('click', function() {
-    $('.push').each(function() {
+  $('.JS_load_toolbox-pushes').on('click', function() {
+    $('.toolbox-push').each(function() {
       $(this).toggleClass('animate-loading');
     });
   });
 
   $('.JS_load_buttons').on('click', function() {
-    $('.btn').each(function() {
+    $('.toolbox-button').each(function() {
       $(this).toggleClass('animate-loading');
     });
   });
@@ -58,7 +58,7 @@ permalink: /buttons
       <div class="field__label">Button - default text configuration</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" %}
+          {% include components/toolbox-button.html title="Keep me in for 2 weeks" %}
         </div>
       </div>
     </div>
@@ -66,7 +66,7 @@ permalink: /buttons
       <div class="field__label">Button - small capital</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" smallCaps="true" %}
+          {% include components/toolbox-button.html title="Keep me in for 2 weeks" smallCaps="true" %}
         </div>
       </div>
     </div>
@@ -74,7 +74,7 @@ permalink: /buttons
       <div class="field__label">Button - no text</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/button.html title="" %}
+          {% include components/toolbox-button.html title="" %}
         </div>
       </div>
     </div>
@@ -84,7 +84,7 @@ permalink: /buttons
       <div class="field__label">Button - default color</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" %}
+          {% include components/toolbox-button.html title="Keep me in for 2 weeks" %}
         </div>
       </div>
     </div>
@@ -92,7 +92,7 @@ permalink: /buttons
       <div class="field__label">Button - go</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" go="true"%}
+          {% include components/toolbox-button.html title="Keep me in for 2 weeks" go="true"%}
         </div>
       </div>
     </div>
@@ -100,7 +100,7 @@ permalink: /buttons
       <div class="field__label">Button - naked</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" naked="true"%}
+          {% include components/toolbox-button.html title="Keep me in for 2 weeks" naked="true"%}
         </div>
       </div>
     </div>
@@ -108,7 +108,7 @@ permalink: /buttons
       <div class="field__label">Button - drop</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" drop="true"%}
+          {% include components/toolbox-button.html title="Keep me in for 2 weeks" drop="true"%}
         </div>
       </div>
     </div>
@@ -118,9 +118,9 @@ permalink: /buttons
       <div class="field__label">Buttons - two next to each other, there has to be a separator between them</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" go="true"%}
-          {% include components/button-aligned-text.html title="•" %}
-          {% include components/button.html title="forget me tomorrow"%}
+          {% include components/toolbox-button.html title="Keep me in for 2 weeks" go="true"%}
+          {% include components/toolbox-button-aligned-text.html title="•" %}
+          {% include components/toolbox-button.html title="forget me tomorrow"%}
         </div>
       </div>
     </div>
@@ -128,9 +128,9 @@ permalink: /buttons
       <div class="field__label">Buttons - aligned text in the middle</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" go="true"%}
-          {% include components/button-aligned-text.html title="or" %}
-          {% include components/button.html title="forget me tomorrow"%}
+          {% include components/toolbox-button.html title="Keep me in for 2 weeks" go="true"%}
+          {% include components/toolbox-button-aligned-text.html title="or" %}
+          {% include components/toolbox-button.html title="forget me tomorrow"%}
         </div>
       </div>
     </div>
@@ -138,9 +138,9 @@ permalink: /buttons
       <div class="field__label">Buttons - aligned text in the middle 2</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/button.html title="Keep me in for 2 weeks" go="true"%}
-          {% include components/button-aligned-text.html title="or" %}
-          {% include components/button.html title="forget me tomorrow" naked="true"%}
+          {% include components/toolbox-button.html title="Keep me in for 2 weeks" go="true"%}
+          {% include components/toolbox-button-aligned-text.html title="or" %}
+          {% include components/toolbox-button.html title="forget me tomorrow" naked="true"%}
         </div>
       </div>
     </div>
@@ -152,7 +152,7 @@ permalink: /buttons
       <div class="field__label">Push - default text configuration</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/push.html title="Present" href="present" %}
+          {% include components/toolbox-push.html title="Present" href="present" %}
         </div>
       </div>
     </div>
@@ -160,7 +160,7 @@ permalink: /buttons
       <div class="field__label">Push - small capital </div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/push.html title="Present" href="present" smallCaps="true" %}
+          {% include components/toolbox-push.html title="Present" href="present" smallCaps="true" %}
         </div>
       </div>
     </div>
@@ -170,7 +170,7 @@ permalink: /buttons
       <div class="field__label">Push - default color</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/push.html title="Present" href="present" %}
+          {% include components/toolbox-push.html title="Present" href="present" %}
         </div>
       </div>
     </div>
@@ -178,7 +178,7 @@ permalink: /buttons
       <div class="field__label">Push - go</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/push.html title="Present" href="present" go="true"%}
+          {% include components/toolbox-push.html title="Present" href="present" go="true"%}
         </div>
       </div>
     </div>
@@ -186,7 +186,7 @@ permalink: /buttons
       <div class="field__label">Push - naked</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/push.html title="Present" href="present" naked="true"%}
+          {% include components/toolbox-push.html title="Present" href="present" naked="true"%}
         </div>
       </div>
     </div>
@@ -194,7 +194,7 @@ permalink: /buttons
       <div class="field__label">Push - drop</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/push.html title="Present" href="present" drop="true"%}
+          {% include components/toolbox-push.html title="Present" href="present" drop="true"%}
         </div>
       </div>
     </div>
