overlay-body -> toolbox-overlay

--- a/pages/inputs.html
+++ b/pages/inputs.html
@@ -61,7 +61,7 @@ permalink: /inputs
       </div>
       <div class="note">
         <li>If the input field is focused or filled, the label is above the input field. When the input field becomes empty again, the label moves down.</li>
-        <li>The overlay is lighter, and click through (overlay-body--visible AND overlay-body--text)</li>
+        <li>The overlay is lighter, and click through (toolbox-overlay--visible AND toolbox-overlay--text)</li>
       </div>
     </div>
 
