--- a/pages/popups.html
+++ b/pages/popups.html
@@ -17,9 +17,9 @@ permalink: /popups
       <li>If the row doesn't have an action, you can apply actions on each cell. An action is not mandatory, you can have cells without actions.</li>
       <h4 class="py-2">Overlay</h4>
       <li>First child of the body</li>
-      <li>For normal popups the overlay is darker, pointer-events-none (overlay-body--visible)</li>
-      <li>For error dialog the overlay is red (overlay-body--visible AND overlay-body--error)</li>
-      <li>For tooltip the overlay is blue (overlay-body--visible AND overlay-body--tooltip)</li>
+      <li>For normal popups the overlay is darker, pointer-events-none (toolbox-overlay--visible)</li>
+      <li>For error dialog the overlay is red (toolbox-overlay--visible AND toolbox-overlay--error)</li>
+      <li>For tooltip the overlay is blue (toolbox-overlay--visible AND toolbox-overlay--tooltip)</li>
     </div>
   </div>
   <div class="sm:w-1/3 p-4 overflow-hidden">
