modal -> toolbox-modal

--- a/pages/inputs.html
+++ b/pages/inputs.html
@@ -80,7 +80,7 @@ permalink: /inputs
     </div>
 
     {% comment %} Popup (error){% endcomment %}
-    <div class="modal" id="ms-error-user">
+    <div class="toolbox-modal" id="ms-error-user">
       <div class="toolbox-table">
         <div class="toolbox-table__row">
           <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
