--- a/pages/toolbox-selectors.html
+++ b/pages/toolbox-selectors.html
@@ -205,7 +205,7 @@ permalink: /toolbox-selectors
     </div>
 
     {% comment %} Popup {% endcomment %}
-    <div class="modal" id="ms-privacy">
+    <div class="toolbox-modal" id="ms-privacy">
       <div class="toolbox-table">
         <div class="toolbox-table__row">
           <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
@@ -249,7 +249,7 @@ permalink: /toolbox-selectors
     </div>
 
     {% comment %} Popup {% endcomment %}
-    <div class="modal" id="ms-error">
+    <div class="toolbox-modal" id="ms-error">
       <div class="toolbox-table">
         <div class="toolbox-table__row">
           <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
@@ -266,7 +266,7 @@ permalink: /toolbox-selectors
     </div>
 
     {% comment %} Popup {% endcomment %}
-    <div class="modal animate-popup" id="ms-status">
+    <div class="toolbox-modal animate-popup" id="ms-status">
       <div class="toolbox-table">
         <div class="toolbox-table__row">
           <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom JS_toolbox-tableRow--error" style="display: none;">
@@ -281,7 +281,7 @@ permalink: /toolbox-selectors
         </div>
       </div>
       <div class="toolbox-table JS_optionsChildren">
-        {% for item in site.data.modal-status.items %}
+        {% for item in site.data.toolbox-modal-status.items %}
         <div class="toolbox-table__row">
           <ul class="toolbox-table__rowInner toolbox-table__rowInner--item toolbox-table__rowInner--action JS_filterableCell JS_error-popupRow">
             <li class="toolbox-table__cell">
@@ -352,13 +352,13 @@ permalink: /toolbox-selectors
       <div class="field__label">Tags</div>
       <div class="field__data">
         <div class="field__value">
-          {% include components/toolbox-selector.html toolboxSelectorData="#0BDA51,,,282;#F4CA16,,,2013_Maintenance;#E30022,,,workaround_available" multiselect="true" selectedIndexes="1,2,3" popupId="#modal-tagpicker" %}
+          {% include components/toolbox-selector.html toolboxSelectorData="#0BDA51,,,282;#F4CA16,,,2013_Maintenance;#E30022,,,workaround_available" multiselect="true" selectedIndexes="1,2,3" popupId="#toolbox-modal-tagpicker" %}
         </div>
       </div>
     </div>
 
     {% comment %} Popup {% endcomment %}
-    {% include popups/modal-tags-colors.html %}
+    {% include popups/toolbox-modal-tags-colors.html %}
   </div>
 </div>
 
