note -> toolbox-note

--- a/pages/inputs.html
+++ b/pages/inputs.html
@@ -45,8 +45,8 @@ permalink: /inputs
           <input class="field__input" type="text" value="">
         </div>
       </div>
-      <div class="note">
-        <li>Example note under empty field. The label is moved into the input field's position and acts as placeholder.</li>
+      <div class="toolbox-note">
+        <li>Example toolbox-note under empty field. The label is moved into the input field's position and acts as placeholder.</li>
         <li>If a field (block around the input) is not empty, you can use the field--not-empty class to make the label stay on top, used in all other pages.</li>
       </div>
     </div>
@@ -59,7 +59,7 @@ permalink: /inputs
           <input class="field__input" type="email" value="nick.de.jaeger@tenforce.com">
         </div>
       </div>
-      <div class="note">
+      <div class="toolbox-note">
         <li>If the input field is focused or filled, the label is above the input field. When the input field becomes empty again, the label moves down.</li>
         <li>The overlay is lighter, and click through (toolbox-overlay--visible AND toolbox-overlay--text)</li>
       </div>
@@ -74,7 +74,7 @@ permalink: /inputs
           <input class="field__input" type="text" value="">
         </div>
       </div>
-      <div class="note">
+      <div class="toolbox-note">
         <p>Example with error. Start typing to trigger example. The error icon is clickable</p>
       </div>
     </div>
@@ -86,7 +86,7 @@ permalink: /inputs
           <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
             <li class="toolbox-table__cell">
               <div class="toolbox-table__cellInner">
-                <div class="note note--error">
+                <div class="toolbox-note toolbox-note--error">
                   <p>Item must have a user assigned.</p>
                 </div>
               </div>
