--- a/pages/toolbox-selectors.html
+++ b/pages/toolbox-selectors.html
@@ -191,7 +191,7 @@ permalink: /toolbox-selectors
     <h2 class="my-8">Examples with popup</h2>
     {% comment %} Field {% endcomment %}
     <div class="field field--not-empty">
-      <div class="field__label">Privacy Policy - tooltip example (note in popup), click icon
+      <div class="field__label">Privacy Policy - tooltip example (toolbox-note in popup), click icon
         <div class="inline-action primary animate-fly-in-left JS_has-popup JS_has-popup--tooltip" data-popid="#ms-privacy"></div>
       </div>
       <div class="field__data">
@@ -212,7 +212,7 @@ permalink: /toolbox-selectors
             <li class="toolbox-table__cell">
               <div class="toolbox-table__cellInner">
 
-                <div class="note note--tooltip">
+                <div class="toolbox-note toolbox-note--tooltip">
                   <p>By selecting 'Agree' you have read and accepted TenForce's <a href="#" class="link link--primary">Privacy Policy</a>, concerning your personal data and how it is used.</p>
                 </div>
 
@@ -242,7 +242,7 @@ permalink: /toolbox-selectors
         </div>
 
       </div>
-      <div class="note">
+      <div class="toolbox-note">
         <p>This is a simple description (no <a href="#" class="link link--primary">with a link example</a>)</p>
         <p>Error animation example: try to change status, then click on error icon or selector field again.</p>
       </div>
@@ -255,7 +255,7 @@ permalink: /toolbox-selectors
           <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom">
             <li class="toolbox-table__cell">
               <div class="toolbox-table__cellInner">
-                <div class="note note--error">
+                <div class="toolbox-note toolbox-note--error">
                   <p>Item could not be selected. <a href="#" class="link link--primary">Read more</a></p>
                 </div>
               </div>
@@ -272,7 +272,7 @@ permalink: /toolbox-selectors
           <ul class="toolbox-table__rowInner toolbox-table__rowInner--custom JS_toolbox-tableRow--error" style="display: none;">
             <li class="toolbox-table__cell">
               <div class="toolbox-table__cellInner">
-                <div class="note note--error">
+                <div class="toolbox-note toolbox-note--error">
                   <p>Item could not be selected. <a href="#" class="link link--primary">Read more</a></p>
                 </div>
               </div>
