--- a/pages/toolbox-tabs.html
+++ b/pages/toolbox-tabs.html
@@ -49,7 +49,7 @@ permalink: /toolbox-tabs
 <div class="flex flex-col sm:flex-row m-8 pb-4 border-b-2 border-dashed border-grey-dark overflow-hidden">
   <div class=" sm:w-full p-2 overflow-hidden">
     <h2 class="mb-8">Tabs</h2>
-    <div class="note">
+    <div class="toolbox-note">
       <ul>
         <li> There is a hover effect or not selected tab_nav_links.</li>
         <li> On choosing the new one, the line under the selected tab_nav_link moves to the new one.</li>
